# spring-ai-rag-agent

./: .gitignore  README.md  pom.xml
md/: api.md  (+17 more)
python-mcp-server/: .env  .env.example  ENHANCEMENT_SUMMARY.md  FETCH_WEBPAGE_USAGE.md  OPTIMIZATION_SUMMARY.md  README.md  main.py  pyproject.toml
python-mcp-server/analyzer/: data_extractor.py  report_generator.py  statistic_calculator.py  trend_analyzer.py
python-mcp-server/config/: __init__.py  constants.py  settings.py
python-mcp-server/datasource/: api_adapter.py  base_adapter.py  dynamic_page_adapter.py  factory.py  file_adapter.py  webpage_adapter.py
python-mcp-server/models/: data_source.py  search_result.py
python-mcp-server/parser/: html_parser.py
python-mcp-server/script/: __init__.py
python-mcp-server/search/: engine.py
python-mcp-server/server/: __init__.py  mcp_server.py
python-mcp-server/tests/: test_dual_layer_cache.py  test_fetch_webpage.py  test_new_features.py  test_optimized_fetch.py  test_phase1.py  test_phase2.py  test_phase3.py
python-mcp-server/tools/: analyze_data_tool.py  fetch_data_tool.py  fetch_webpage_tool.py  generate_chart_data_tool.py  generate_report_tool.py  trend_analysis_tool.py  web_search_tool.py
python-mcp-server/utils/: __init__.py  banner.py  cache_interface.py  cache_manager.py  cache_monitor.py  cache_sync.py  cache_warmer.py  content_cleaner.py  dual_layer_cache_manager.py  exceptions.py  full_data_cache_manager.py  hot_data_cache_manager.py  hot_data_tracker.py  http_client.py  launcher.py  logger.py  url_rate_limiter.py  url_validator.py  validator.py
(+332 files in other folders)
