[project]
name = "python-mcp-server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "chromadb-client>=1.5.9",
    "deepagents==0.6.12",
    "langchain==1.3.11",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph==1.2.7",
    "lxml>=6.1.1",
    "mcp[cli]>=1.28.1",
    "notebook>=7.5.6",
    "openai==2.44.0",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.4",
    "pyinstaller>=6.20.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tinycss2==1.5.1",
]
